Fix paint tooltip clipping on mobile

--- a/styles.css
+++ b/styles.css
@@ -371,6 +371,8 @@ input[type="number"] {
         to {top: 0px;}
     }
 
+
+
 .modal-close-btn {
     color: #1f1f1f;
     font-size: 3rem;
@@ -435,7 +437,8 @@ input[type="number"] {
     border: 4px solid;
     border-radius: 5px;
     position: relative;  
-    flex: 0 0 50px;
+    /* flex: 0 0 50px; */   flex-wrap: wrap;
+
 }
 
 .slide-up {
@@ -447,13 +450,29 @@ input[type="number"] {
         to {bottom: 0px;}
     }
 
+.bar1 {
+    display: flex;
+    justify-content: center;
+  
+
+
+}
+
+.bar2 {
+    display: flex;
+    justify-content: center;
+ 
+}
+
 .modal-toolbar-icon-container {
     border: 4px solid #1f1f1f;
     padding: 4px;
     background-color: #fafafa;
-    margin-right: .7rem;
+    margin: .2rem .6rem .2rem 0;
     transition: transform .2s linear;
     height: 25px;
+   
+   
     
 }
 
@@ -547,25 +566,26 @@ input[type="number"] {
     border-radius: 6px;
     padding: 5px 0;
     position: absolute;
-    top: -80px;
-    right: -60%;
+    top: -100px;
+    right: -150%;
     animation: bounce 1.85s ease-in-out infinite;
     cursor: pointer;
     pointer-events: none;
     user-select: none;
+    font-size: 1rem;
 }
 
     @keyframes bounce {
-        0% {top: -80px;}
+        0% {top: -82px;}
         50% {top: -75px;}
-        100% {top: -80px;}
+        100% {top: -82px;}
     }
 
     .modal-paint-tooltip::after {
         content: "";
         position: absolute;
         top: 107%;
-        left: 50%;
+        left: 20%;
         margin-top: -5px;
         border-width: 5px;
         border-style: solid;
@@ -718,6 +738,41 @@ spectrum custom styles */
         flex: none;
  
     }
+
+    
+    .modal-paint-tooltip {
+        width: 100px;
+        background-color: #1f1f1f;                      
+        color: #fafafa;
+        text-align: center;
+        border-radius: 6px;
+        padding: 5px 0;
+        position: absolute;
+        top: -100px;
+        right: -90%;
+        animation: bounce 1.85s ease-in-out infinite;
+        cursor: pointer;
+        pointer-events: none;
+        user-select: none;
+        font-size: 1rem;
+    }
+
+        @keyframes bounce {
+            0% {top: -82px;}
+            50% {top: -75px;}
+            100% {top: -82px;}
+        }
+
+        .modal-paint-tooltip::after {
+            content: "";
+            position: absolute;
+            top: 107%;
+            left: 45%;
+            margin-top: -5px;
+            border-width: 5px;
+            border-style: solid;
+            border-color: #1f1f1f transparent transparent transparent ;
+        }
 
    
  }
